[gd_scene load_steps=2 format=3 uid="uid://be1ewsl5lrpr3"]

[ext_resource type="Script" path="res://FishButton.gd" id="1_ou55q"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 608.0
offset_top = 424.0
offset_right = 908.0
offset_bottom = 648.0

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 256.0
offset_right = 480.0
offset_bottom = 296.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer" node_paths=PackedStringArray("FishLabel", "MoneyLabel")]
layout_mode = 2
text = "Fish
"
script = ExtResource("1_ou55q")
FishLabel = NodePath("../FishCaughtLabel")
MoneyLabel = NodePath("../CurrencyLabel")

[node name="FishCaughtLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "No fish caught yet."

[node name="TextureProgressBar" type="TextureProgressBar" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="CurrencyLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Money: $0"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="CenterContainer/VBoxContainer/Button" method="_on_button_pressed"]
